// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/InlineButton Defaults play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithAccesskey play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          accesskey="j"
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithAriaDescribedby play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          type="button"
          aria-describedby="testid1234"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="htmlId"
          class="_button_12a0b_1   dummyClassname"
          lang="nb"
          data-testid="123ID"
          data-brightness="default"
          form="formid123"
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithBrightness smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8"
          data-brightness="light"
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithCustomIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8"
          data-brightness="default"
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithDisabled play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          disabled
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithDisabledAndBrightness smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8"
          data-brightness="light"
          disabled
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithDisabledAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8"
          data-brightness="default"
          disabled
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          type="button"
  >
    <span class>
      Knapp har blitt klikket på
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithIcon play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8"
          data-brightness="default"
          type="button"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithIconRight smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1  _button_withIconRight_12a0b_8"
          data-brightness="default"
          type="button"
  >
    <span class>
      Legg til rapport
    </span>
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/InlineButton WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          type="button"
  >
    <span class>
      Denne knappen har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er venstrejustert. Denne knappen har en veldig lang tekst. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er venstrejustert.
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithLongTextAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1  _button_withIconRight_12a0b_8"
          data-brightness="default"
          type="button"
  >
    <span class>
      Denne knappen har en veldig lang tekst med ikon på høyre side. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er høyrejustert. Denne knappen har en veldig lang tekst med ikon på høyre side. Så lang at den lange teksten tvinger fram linjeskift hvor tekst er høyrejustert.
    </span>
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Tester/InlineButton WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          type="button"
          id="dummyIdForwardedFromRef"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;

exports[`Tester/InlineButton WithSpinner smoke-test 1`] = `
<div data-test-block="true">
  <div class="flex bottomSpacingXL">
    <button class="_button_12a0b_1   marginRightM"
            data-brightness="default"
            type="button"
    >
      <span class>
        Legg til rapport
      </span>
    </button>
    <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8  marginRightM"
            data-brightness="default"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
      <span class>
        Legg til rapport
      </span>
    </button>
    <button class="_button_12a0b_1  _button_withIconRight_12a0b_8"
            data-brightness="default"
            type="button"
    >
      <span class>
        Legg til rapport
      </span>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
    </button>
  </div>
  <div class="flex">
    <button class="_button_12a0b_1   marginRightM"
            data-brightness="default"
            type="button"
    >
      <span class="_hide_12a0b_94">
        Legg til rapport
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_12a0b_13"
      >
        <div class="_spinnerAnimation_wnf1f_40">
        </div>
        <span id="title-:r8:"
              class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66"
        >
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8  marginRightM"
            data-brightness="default"
            type="button"
    >
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42 _hide_12a0b_94"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
      <span class="_hide_12a0b_94">
        Legg til rapport
      </span>
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_12a0b_13"
      >
        <div class="_spinnerAnimation_wnf1f_40">
        </div>
        <span id="title-:ra:"
              class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66"
        >
          Laster inn
        </span>
      </div>
    </button>
    <button class="_button_12a0b_1  _button_withIconRight_12a0b_8"
            data-brightness="default"
            type="button"
    >
      <span class="_hide_12a0b_94">
        Legg til rapport
      </span>
      <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42 _hide_12a0b_94"
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z">
        </path>
      </svg>
      <div aria-live="polite"
           aria-atomic="true"
           class="_spinner_wnf1f_5 _spinner_blue_wnf1f_16 _spinner_flexColumn_wnf1f_32 _spinner_small_wnf1f_22 _spinner_12a0b_13"
      >
        <div class="_spinnerAnimation_wnf1f_40">
        </div>
        <span id="title-:rc:"
              class="_spinnerTitle_wnf1f_59 _srOnly_wnf1f_70 _spinnerTitle_centerText_wnf1f_66"
        >
          Laster inn
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Tester/InlineButton WithType play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1"
          data-brightness="default"
          type="submit"
  >
    <span class>
      Legg til rapport
    </span>
  </button>
</div>
`;
